--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,300;0,400;0,500;0,600;0,900;1,700&display=swap');
 .App {
   text-align: center;
+  font-family:'Source sans pro';
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+.w-inherit{width:inherit}
+.footer{background:#6574a6;}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
